Aggiunta funzionalità commento e dashboard