@@ -1,42 +1,38 @@
 package it.ecohouses.www.backend.services;
 
-import it.ecohouses.www.backend.model.*;
-import it.ecohouses.www.backend.repositories.*;
+import it.ecohouses.www.backend.model.ConsumoEnergetico;
+import it.ecohouses.www.backend.model.ProduzioneEnergia;
+import it.ecohouses.www.backend.repositories.ConsumoEnergeticoRepository;
+import it.ecohouses.www.backend.repositories.ProduzioneEnergiaRepository;
 import org.springframework.stereotype.Service;
+
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class DashboardService {
-    private final AbitazioneRepository abitazioneRepository;
+
     private final ConsumoEnergeticoRepository consumoEnergeticoRepository;
     private final ProduzioneEnergiaRepository produzioneEnergiaRepository;
 
-    public DashboardService(AbitazioneRepository abitazioneRepository,
-                            ConsumoEnergeticoRepository consumoEnergeticoRepository,
+    public DashboardService(ConsumoEnergeticoRepository consumoEnergeticoRepository,
                             ProduzioneEnergiaRepository produzioneEnergiaRepository) {
-        this.abitazioneRepository = abitazioneRepository;
         this.consumoEnergeticoRepository = consumoEnergeticoRepository;
         this.produzioneEnergiaRepository = produzioneEnergiaRepository;
     }
 
-    public List<ConsumoEnergetico> visualizzaConsumi(Abitazione abitazione, LocalDateTime inizio, LocalDateTime fine) {
-        List<ConsumoEnergetico> listaConsumi;
-        listaConsumi = consumoEnergeticoRepository.findConsumiByAbitazione(abitazione.getIdAbitazione()).stream()
+    public List<ConsumoEnergetico> visualizzaConsumi(Long abitazioneId, LocalDateTime inizio, LocalDateTime fine) {
+        // Recupero i consumi energetici per un abitazione dato un intervallo di tempo
+        return consumoEnergeticoRepository.findConsumiByAbitazione(abitazioneId).stream()
                 .filter(consumo -> consumo.getData().isAfter(inizio) && consumo.getData().isBefore(fine))
-                .toList();
-
-        return listaConsumi;
+                .collect(Collectors.toList());
     }
 
-    public List<ProduzioneEnergia> visualizzaProduzione(Abitazione abitazione, LocalDateTime inizio, LocalDateTime fine) {
-        List<ProduzioneEnergia> listaProduzione;
-        listaProduzione = produzioneEnergiaRepository.findProduzioneByAbitazione(abitazione.getIdAbitazione()).stream()
-                .filter(consumo -> consumo.getData().isAfter(inizio) && consumo.getData().isBefore(fine))
-                .toList();
-
-        return listaProduzione;
-
-
+    public List<ProduzioneEnergia> visualizzaProduzione(Long abitazioneId, LocalDateTime inizio, LocalDateTime fine) {
+        // Recupero la produzione energetica per un abitazione dato un intervallo di tempo
+        return produzioneEnergiaRepository.findProduzioneByAbitazione(abitazioneId).stream()
+                .filter(produzione -> produzione.getData().isAfter(inizio) && produzione.getData().isBefore(fine))
+                .collect(Collectors.toList());
     }
 }
